--- a/templates/home.html
+++ b/templates/home.html
@@ -34,8 +34,8 @@
             <div class="row">
                 <div class="col text-center py-4">
                     <a href="#" type="button" class="btn btn-outline-light">Comprar criptos</a>
-                    <a href="#" type="button" class="btn btn-outline-light">Iniciar sesión</a>
-                    <a href="#" type="button" class="btn btn-outline-light">Registrarse</a>
+                    <a href="/login" type="button" class="btn btn-outline-light">Iniciar sesión</a>
+                    <a href="/signin" type="button" class="btn btn-outline-light">Registrarse</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
                             minoristas y perderse la totalidad del importe invertido.</h6>
                     </div>
                     <div class="col-3 pt-5 mt-4 px-5">
-                        <a href="#" type="button" class="btn btn-outline-light">¡Empecemos!</a>
+                        <a href="/login" type="button" class="btn btn-outline-light">¡Empecemos!</a>
                     </div>
                     <div class="col-3">
                         <img class="img-fluid"
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <hr>
-                <div class="col text-center">
+                <div class="col text-center pb-5">
                     <small><strong>Todo el contenido tiene fin humorístico, no se tome nada de lo que vea a continuación
                             en serio, ni intente hacer transacciones reales.</strong></small>
                     <div>
