--- a/templates/login.html
+++ b/templates/login.html
@@ -30,12 +30,12 @@
 
 <body>
     <section class="negro">
-        {% if mensaje %}
+        {% if mensaje1 %}
         <div class="container py-2">
             <div class="row">
                 <div class="col-12">
                     <div class="alert alert-danger" role="alert">
-                        {{mensaje}}
+                        {{mensaje1}}
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                 </label>
                 <input type="#" class="form-control" id="exampleFormControlInput1" placeholder="" name="email">
                 <div class="col py-3 text-center">
-                    <a href="/loginpass" type="button" class="btn btn-outline-light btn-lg">Siguiente</a>
+                    <button type="submit" class="btn btn-outline-light btn-lg">Siguiente</button>
                 </div>
                 <div class="col-12 text-end magenta">
                     <p>(No apto para generación Z).</p>
