--- a/templates/loginpass.html
+++ b/templates/loginpass.html
@@ -30,18 +30,18 @@
 
 <body>
     <section class="negro">
-        {% if mensaje %}
+        {% if mensaje2 %}
         <div class="container py-2">
             <div class="row">
                 <div class="col-12">
                     <div class="alert alert-danger" role="alert">
-                        {{mensaje}}
+                        {{mensaje2}}
                     </div>
                 </div>
             </div>
         </div>
         {% endif %}
-        <form class="container blanco" action="/login/admins">
+        <form class="container blanco" action="/loginpass/admins">
             <div class="row">
                 <div class="col-6 py-5">
                     <a href="/login" class="text-decoration-none">
@@ -62,7 +62,7 @@
                 </label>
                 <input type="#" class="form-control" id="exampleFormControlInput1" placeholder="" name="password">
                 <div class="col py-3 text-center">
-                    <a href="#" type="button" class="btn btn-outline-light btn-lg">Iniciar sesión</a>
+                    <button type="submit" class="btn btn-outline-light btn-lg">Iniciar sesión</button>
                 </div>
                 <hr>
                 <div class="col text-center pt-3 pb-5">
