Creación vista index.html y registro exitoso.

--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center py-4">
-                    <a href="#" type="button" class="btn btn-outline-light">Comprar criptos</a>
+                    <a href="/index" type="button" class="btn btn-outline-light">Comprar criptos</a>
                     <a href="/login" type="button" class="btn btn-outline-light">Iniciar sesión</a>
                     <a href="/signin" type="button" class="btn btn-outline-light">Registrarse</a>
                 </div>
