Creación vista P2P y Perfil, Fix en el index

--- a/templates/finished.html
+++ b/templates/finished.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-6 cuadrados gris py-5" style="border-radius: 30px;">
                     <h1>¡Registro Completado!</h1>
-                    <h3>Ya formas parte de nuestra red ilegal, Compra, Vende criptoactivos</h3>
+                    <h3>Ya formas parte de nuestra red ilegal, Compra, Vende y Regala criptoactivos.</h3>
                     <div class="text-center">
                         <img width="400" height="400" src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt=""
                             srcset="">
