--- a/templates/index.html
+++ b/templates/index.html
@@ -37,14 +37,16 @@
 </head>
 
 <body>
-    <section>
-        <div class="container negro blanco">
+    <section class="negro">
+        <div class="container fmagenta  blanco" style="border-radius: 20px;">
             <div class="row py-4 text-center">
                 <div class="col-2">
-                    <img width="100" height="100" src="https://i.imgur.com/iYKmUvA.png" alt="" srcset="">
+                    <a href="/profile">
+                        <img width="100" height="100" src="https://i.imgur.com/iYKmUvA.png" alt="" srcset="">
+                    </a>
                 </div>
                 <div class="col-2">
-                    <nav class="navbar negro pt-4">
+                    <nav class="navbar fmagenta pt-4">
                         <div class="container-fluid">
                             <form class="d-flex" role="search">
                                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Buscar">
@@ -74,8 +76,8 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="container negro blanco">
+    <section class="negro">
+        <div class="container blanco py-3">
             <div class="row">
                 <div class="col">
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
@@ -152,8 +154,7 @@
             </div>
             <div class="row text-center py-5">
                 <div class="col-2">
-                    <img width="100" height="100" src="https://cdn.icon-icons.com/icons2/37/PNG/512/rocket_3807.png"
-                        alt="">
+                    <img width="100" height="100" src="https://static.thenounproject.com/png/39980-200.png" alt="">
                     <h6 class="pt-3">Launchpad</h6>
                 </div>
                 <div class="col-2">
@@ -162,7 +163,7 @@
                 </div>
                 <div class="col-4">
                     <img width="100" height="100"
-                        src="https://cdn.icon-icons.com/icons2/3131/PNG/512/deposit_money_bank_salary_saving_icon_192226.png"
+                        src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/012/458/original/money_5514944.png?1632676157"
                         alt="">
                     <h6 class="pt-3">Depositar</h6>
                 </div>
@@ -179,27 +180,29 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="container negro blanco">
-            <div class="row cuadrados gris" style="border-radius: 30px;">
-                <div class="col-12 py-4">
-                    <h3>Comercio P2P</h3>
+    <section class="negro">
+        <div class="container">
+            <a href="/p2p" class="text-decoration-none">
+                <div class="row cuadrados gris blanco" style="border-radius: 30px;">
+                    <div class="col-12 py-4">
+                        <h3>Comercio P2P</h3>
+                    </div>
+                    <div class="col-6">
+                        <p>Transferencia bancaria, transferencia de billetera digital, pago móvil o depósitos en cuentas
+                            de las bahamas, (cobramos el 40% de las transacciones directo de la billetera)</p>
+                    </div>
+                    <div class="col-2 text-center pb-3">
+                        <img widht="100" height="100"
+                            src="https://cdn.icon-icons.com/icons2/3263/PNG/512/exchange_icon_206963.png" alt="">
+                    </div>
+                    <div class="col-2 pt-4">
+                        <h1 class="magenta">MAFIANCE</h1>
+                    </div>
+                    <div class="col-2 text-center">
+                        <img widht="100" height="100" src="https://static.thenounproject.com/png/40328-200.png" alt="">
+                    </div>
                 </div>
-                <div class="col-6">
-                    <p>Transferencia bancaria, transferencia de billetera digital, pago móvil o depósitos en cuentas
-                        de las bahamas, (cobramos el 40% de las transacciones directo de la billetera)</p>
-                </div>
-                <div class="col-2 text-center pb-3">
-                    <img widht="100" height="100"
-                        src="https://cdn.icon-icons.com/icons2/3263/PNG/512/exchange_icon_206963.png" alt="">
-                </div>
-                <div class="col-2 pt-4">
-                    <h1 class="magenta">MAFIANCE</h1>
-                </div>
-                <div class="col-2 text-center">
-                    <img widht="100" height="100" src="https://static.thenounproject.com/png/40328-200.png" alt="">
-                </div>
-            </div>
+            </a>
             <div class="row">
                 <div class="col text-center py-5">
                     <a href="/index" type="button" class="btn btn-outline-light btn-lg">Favoritos</a>
@@ -210,7 +213,7 @@
                 </div>
             </div>
             <hr>
-            <div class="row py-3">
+            <div class="row py-3 blanco">
                 <div class="col-4 text-center">
                     <div class="pb-4">
                         <small style="color: grey">Nombre</small>
@@ -253,9 +256,7 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section>
-        <div class="container negro blanco">
+        <div class="container blanco">
             <div class="row cuadrados fmagenta py-3" style="border-radius: 30px;">
                 <div class="col-3 text-end px-5">
                     <img widht="100" height="100"
