Ajuste de color, creación vista seller y divisa.

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             }
 
             .magenta {
-                color: #8c509a;
+                color: #b96acb;
             }
 
             .fmagenta {
@@ -182,7 +182,7 @@
     </section>
     <section class="negro">
         <div class="container">
-            <a href="/p2p" class="text-decoration-none">
+            <a href="/p2pBuyer" class="text-decoration-none">
                 <div class="row cuadrados gris blanco" style="border-radius: 30px;">
                     <div class="col-12 py-4">
                         <h3>Comercio P2P</h3>
