creación de vista ordenes y notas en otras vistas

--- a/templates/divisa.html
+++ b/templates/divisa.html
@@ -64,7 +64,8 @@
 
                 <!--Recordatorio: 1.Hacer que al darle click el usuario se coloque un icono de ✅ y redireccione. 
                 2. Que el abcedario permanezca en pantalla cuando haga scroll
-                3. Consultar si se debe meter en base de datos tengo sospecha.-->
+                3. Consultar si se debe meter en base de datos tengo sospecha.
+                4. Colocar las banderas de los paises.-->
 
                 <div class="col-4 text-end" style="color: #d0d0d0;">
                     <p>$ARS</p>
