--- a/templates/p2pBuyer.html
+++ b/templates/p2pBuyer.html
@@ -80,7 +80,9 @@
                         </ul>
                     </div>
                 </div>
-                <!--Recordar que debo hacer que el nombre de divisa cambie al cambiar la otra vista-->
+                <!--1.Recordar que debo hacer que el nombre de divisa cambie al cambiar la otra vista
+                    2. Debo crear pop ups: a) notificaciones de alerta, b)opciones, c)cantidad, metodos de pago
+                    3. Filtro-->
                 <div class="col-2 text-end">
                     <h3>ARS</h3>
                 </div>
@@ -125,8 +127,12 @@
                     </button>
                 </div>
                 <div class="col-1 pt-4">
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/2596/PNG/512/history_icon_155273.png" alt="" srcset="">
+                    <a href="">
+                        <a href="/orders">
+                            <img width="50" height="50"
+                                src="https://cdn.icon-icons.com/icons2/2596/PNG/512/history_icon_155273.png" alt=""
+                                srcset="">
+                        </a>
                 </div>
             </div>
             <div class="row">
